src/tests/testfiles/unary-operators/types-1.txt
Error at 3:5: Logical not operator operand not compatible with float
!f;
^
